# predection-model

./: .gitignore  CLAUDE.md  MONEY-MANAGEMENT.md  README.md  ablation.py  ablation_schedule.py  analyze_candles.py  backtest_schedule.py  binary_options_backtest.py  cli.py  compare_periods.py  deep_confidence_analysis.py  fetch_extra_data.py  fetch_futures_data.py  pyproject.toml  recalibrate.py  shap_analysis.py  sweep_confidence.py  threshold_sweep.py  threshold_sweep_ext.py  train_global_default.py  true_oos_backtest.py  true_oos_backtest_m15.py  true_oos_backtest_v2.py  true_oos_backtest_v3.py  validate_system.py
catboost_info/: learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
models/: ablation_results.json  backtest_report.json  comparison_global.csv  comparison_report.json  comparison_slots.csv  predictions.csv  predictions_old.csv  schedule.json  schedule_v3.json  sweep_confidence.csv  threshold_sweep_results.json
models/m15/: model_calibrated.pkl
models/oos_v3/: default.pkl  friday_all.pkl  sunday_9_20.pkl  weekdays_night.pkl
models/oos_valid/: default.pkl  friday_all.pkl  sunday_9_20.pkl  weekdays_day.pkl  weekdays_night.pkl
models/schedule/: friday_all.pkl  saturday_0_7.pkl  saturday_14_24.pkl  saturday_7_14.pkl  (+6 more)
polymarket/: bot.py  client.py  market_finder.py  setup_credentials.py  test_dry_run.py  trader.py
tests/: conftest.py  test_backtest.py  test_features.py  test_live.py  test_model.py
utils/: analyze_predictions.py  config_money_management.yaml  generate_predictions_range.py  monthly_backtest_report.py
(+19 files in other folders)
